mexendo novamente no css, e arrumando o link interno

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
                 </ul>
             </nav>
         </header>
-        <img id="minha_foto" alt="foto do Tiago" src="https://avatars1.githubusercontent.com/u/68355072?s=460&u=b51db7ba3f1d958425b778c6b9caa434b4189db8&v=4">
-        <div class="listas">
+        <div class="left-sidebar">
             <div>
-                <h2>Lições aprendidas</h2>
-                <ol id="licoes_aprendidas">
+                <img id="minha_foto" alt="foto do Tiago" src="https://avatars1.githubusercontent.com/u/68355072?s=460&u=b51db7ba3f1d958425b778c6b9caa434b4189db8&v=4">
+            </div>
+            <div>
+                <h2 id="licoes_aprendidas">Lições aprendidas</h2>
+                <ol>
                     <li>Fundamentos de Desenvolvimento WEB</li>
                     <li>UNIX</li>
                     <li>SHELL</li>
@@ -39,8 +41,8 @@
                 </ol>
             </div>
             <div>
-                <h2>Lições a Aprender</h2>
-                <ul id="licoes_a_aprender">
+                <h2 id="licoes_a_aprender">Lições a Aprender</h2>
+                <ul>
                     <li>JavaScript</li>
                     <li>DOM e Seletores</li>
                     <li>Web Storage</li>
@@ -54,6 +56,8 @@
                 </ul>
             </div>
         </div>
+
+        
         <p> enchedor de linguiça</p>
         <p> enchedor de linguiça</p>
         <p> enchedor de linguiça</p>
