--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
       <li>Empatia</li>
     </ol>
     <ul id="licoes_a_aprender">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>JavaScript</li>
+      <li>DOM</li>
+      <li>Forms</li>
+      <li>CSS Responsive</li>
+      <li>ES6</li>
+      <li>SoftSkills</li>
+      <li>Unit Tests</li>
+      <li>React</li>
+      <li>Node</li>
+      <li>SQL</li>
     </ul>
   </body>
 </html>
