Requisito 9 - adicionado aside

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
         <li>Algoritmos e estrutura de dados</li>
       </ul>
     </section>
+    <aside>
+      <h2>Como é estudar na Trybe</h2>
+      <p>
+        Estudar na Trybe é com certeza desafiador, temos bastante conteúdo e o tempo para desenvolver os exercícios é quase sempre bem justo. Vez ou outra não entendo, mas algo que o professor diz durante a aula ao vivo ou alguma dúvida de algum colega acaba ajudando muito no entendimento, ou posso ter esquecido de fechar uma das chaves no código e acabar perdendo um tempão com isso.
+      </p>
+    </aside>
     <section>
       <p>Link para acessar meu perfil no <a href="https://github.com/marcusWittho" target="_blank">GitHub</a> e acompanhar meu desenvolvimento durante o curso.</p>
     </section>
