Requisito 5. Inserindo lista nao numerada e com ID licoes_a_aprender

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
 
-    <main> 
+    <main>
         <img src="minha_foto.png" id="minha_foto">
 
         <ol id="licoes_aprendidas">
@@ -27,10 +27,21 @@
             <li>Zoom</li>
             <li>HTML Semântico</li>
         </ol>
+
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsivo</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
+
     </main>
-    
-
-
 
 </body>
 </html>
