--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <header id="cabecalho">
       <h1 id="titulo">Lições Aprendidas</h1>
     </header>
+    <main>
+        <img id="minha_foto" src="assets/Foto Terno.jpeg" alt="Minha foto usando terno">
+    </main>
   </body>
 </html>
