desenvolvimento do meu lessons learned

--- a/index.html
+++ b/index.html
@@ -7,8 +7,61 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Gabriel Oliva</h1>
+
+  <header id="cabecalho">
+    <h1 id="titulo">Lições aprendidas do Gabriel Oliva com a T9</h1>
   </header>
+
+  <main>
+    <section id="container_img">
+      <img id="minha_foto" src="img/oliva.png" alt="Oliva emo">
+    </section>
+
+    <section id="container_licoes">
+      <section id="container_licoes_aprendidas">
+        <h2>Lições Aprendidas</h2>
+        <ol id="licoes_aprendidas">
+          <li>Não deixar o Arlesson assumir o Host da reunião do zoom</li>
+          <li>git commit é diferente de got commit</li>
+          <li>A partir de hoje, todo novo repositório colocar a branch principal com o nome main</li>
+          <li>Deixar nosso HTML semântico pode ser um dividor de águas na vida de pessoas com algum tipo de deficiencia visual</li>
+          <li>Não arrumar a cortina do quarto faltando 1 minuto para começar a aula</li>
+          <li>Não mandar um @here no slack da turma e ir arrumar a cortina do quarto</li>
+          <li>Confirmar a troca de Host antes de executar tal ação</li>
+          <li>Não deixar um copo de água próximo ao meu mouse na hora da aula ao vivo</li>
+          <li>O poder pode subir na cabeça <strike>do Arlesson</strike> das pessoas quando o Host da reunião é dado</li>
+          <li>Arrumar CSS do site é igual arrumar cortina do meu quarto, uma hora cai.</li>
+        </ol>
+      </section>
+  
+      <section id="container_licoes_a_aprender">
+        <h2>Lições que desejo aprender</h2>
+        <ul id="licoes_a_aprender">
+          <li>Dar Host da reunião no zoom da forma correta</li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </section>
+
+      <article>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris augue lectus, sagittis eget elementum ac, tincidunt at nisi. Praesent bibendum, est ut faucibus euismod, metus sem congue justo, eget pulvinar erat tortor in magna. Nam molestie risus urna, at pellentesque ipsum maximus at. Nullam mauris quam, venenatis dapibus molestie id, scelerisque id nibh. Sed quis massa aliquam, consequat libero non, hendrerit lorem. Nunc posuere semper nulla sit amet euismod. Vivamus mattis erat non est finibus consequat. Mauris sollicitudin, arcu sit amet interdum cursus, lorem lacus venenatis ante, a ultrices enim justo quis elit. Ut mollis suscipit enim quis ornare. Phasellus tempus velit leo, non pellentesque mi tincidunt id. Quisque rutrum vitae odio a semper. Cras magna ante, malesuada vitae erat non, gravida dignissim ligula.
+        </p>
+      </article>
+    </section>
+    
+
+    <footer id="rodape">
+      <p id="rodape_info">Visitem meu <a href="http://github.com/gfpoliva" target="__blank">github</a></p>
+    </footer>
+  </main>
+
 </body>
 </html>
