--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
       <div id="cabecalho">
         <h1 id="titulo">LESSONS LEARNED PROJECT</h1>
       </div>
-      <img id="minha_foto" src="fotolets.jpg">
+      <img id="minha_foto" src="fotolets.jpg" alt="foto de uma mulher branca sorrindo com cabelo chanel de cor castanho e blusa cor de vinho">
     </body>
 </html>
