Corrige requisito 9 -dentro tinha colocado article

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             </header>
         </section>
         <aside>
-            <article>
+            <section>
                 <header><h2>A briga com a centralização vertical...</h2></header>
                 <article>
                     <p>Após a aula do bloco 3.3, onde estudamos um pouco mais sobre os seletores no CSS, tentei aplicar na página do meu portfólio o conteúdo visto. Criei uma seção a qual precisava centralizar um conteúdo verticalmente e passei o final de semana todo tentando fazê-lo.</p>
                 </article>
-            </article>
+            </section>
         </aside>
     </main>
     <footer id="rodape">
