Correcao aside e lista enumerada

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </header>
 
         <main>
-            <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
+            <div>
+                <img src="/sauloimg.jpeg" alt="Imagem de Saulo Kirchmaier" id="minha_foto">
+            </div>
 
             <section>
                     <h2>Estudado</h2>
@@ -37,20 +39,22 @@
                         <li>Internet</li>
                         <li>Resiliência</li>
                     </ol>
+            </section>
 
-                    <h2>A estudar</h2>
-                    <ul id="licoes_a_aprendidas">
-                        <li>JavaScript</li>
-                        <li>SQL</li>
-                        <li>NoSQL</li>
-                        <li>Responsividade</li>
-                        <li>Testes</li>
-                        <li>Trabalho em equipe</li>
-                        <li>Tomada de decisões</li>
-                        <li>Jest</li>
-                        <li>React</li>
-                        <li>Redux</li>
-                    </ul>
+            <section>
+                <h2>A estudar</h2>
+                <ul id="licoes_a_aprendidas">
+                    <li>JavaScript</li>
+                    <li>SQL</li>
+                    <li>NoSQL</li>
+                    <li>Responsividade</li>
+                    <li>Testes</li>
+                    <li>Trabalho em equipe</li>
+                    <li>Tomada de decisões</li>
+                    <li>Jest</li>
+                    <li>React</li>
+                    <li>Redux</li>
+                </ul>
             </section>
 
             <section>
@@ -61,7 +65,7 @@
 
                 <aside id="passagem-aprendizado">
                     <h3>Aconteceu comigo</h3>
-                    <p>Na Trybe, fazemos muitas atividades de sofl skills, uma delas foi o primeiro trabalho em equipe, em que eu e mais 6 colegas eleboramos uma apresentação sobre o funcionamento da internet. Foi muito interessante ver que existem diversas opiniões e pontos de vista.</p>
+                    <p>Na Trybe, fazemos muitas atividades de sofl skills, uma delas foi o primeiro trabalho em equipe, em que eu e mais 6 colegas eleboramos uma apresentação sobre o funcionamento da internet.</p>
                 </aside>
             </section>
 
