--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             </section>
         </main>
         <footer id="rodape">
-
+            <ul>
+                <li><a href="https://brenno-calado.carto.com/" target="_blank">CARTO</a></li>
+                <li><a href="https://www.linkedin.com/in/brenno-calado-vieira-de-melo-nascimento/" target="_blank"></a>Linkedin</li>
+            </ul>
         </footer>
     </body>
 </html>
