Added <ul> of lessons to learn (Requisite 5)

--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@
         <li>Empatia</li>
         <li>Inspeção de elementos HTML</li>
     </ol>
+    <ul id="licoes_a_aprender">
+        <li>Apresentação de seminários</li>
+        <li>JavaScript</li>
+        <li>CSS Responsivo</li>
+        <li>SQL</li>
+        <li>NodeJS</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Forms</li>
+        <li>DOM</li>
+        <li>ES6</li>
+    </ul>
 </body>
 </html>
