--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
   </nav>
   <img src="foto.jpg" alt="Foto de Henrique Brito Elias" id="minha_foto">
-  <p><a href="https://github.com/henriquebelias" target="_blank" id="social">Henrique Brito Elias - GitHub</a></p>
+  <p id="social"><a href="https://github.com/henriquebelias" target="_blank">Henrique Brito Elias - GitHub</a></p>
   <section>
     <h3>Lições</h3>
     <ol id="licoes_aprendidas">
@@ -71,12 +71,12 @@
       </tr>
     </table>
   </section>
-  <article>
+  <article class="lado-esquerdo">
     <p>Após duas semanas de Trybe consigo perceber a minha evolução, comecei sem nenhum conhecimento prévio na área do desenvolvimento, já que vim de outra completamente diferente. Hoje consigo fazer páginas web, que apesar de serem simples, já são um grande avanço para mim. Sei que daqui pra frente é só melhoria e vou com tudo para conseguir alcançar esse objetivo. #VQV #GoTrybe</p>
   </article>
-  <aside>
+  <aside class="lado-direito">
     <p>Com duas semanas de ensino aprendi a criar páginas web e a colocá-las online, sempre observando o versionamento do código.</p>
   </aside>
-  <footer id="rodape"></footer>
+  <footer id="rodape">Feito por Henrique Brito Elias</footer>
 </body>
 </html>
