--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       </nav>
     </header>
     <main>
-      <section>
+      <figure>
         <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
         <a href="https://github.com/GabriellCastro">Meu Github 👈</a>
-      </section>
+      </figure>
       <table>
         <section>
           <ol id="licoes_aprendidas">
@@ -55,27 +55,27 @@
           </ul>
         </section>
       </table>
-    </main>
-    <article>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book.
-      </p>
-    </article>
-    <section>
-      <aside>
+      <article>
         <p>
-          It has survived not only five centuries, but also the leap into
-          electronic typesetting, remaining essentially unchanged. It was
-          popularised in the 1960s with the release of Letraset sheets
-          containing Lorem Ipsum passages, and more recently with desktop
-          publishing software like Aldus PageMaker including versions of Lorem
-          Ipsum.
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book.
         </p>
-      </aside>
-    </section>
+      </article>
+      <section>
+        <aside>
+          <p>
+            It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged. It was
+            popularised in the 1960s with the release of Letraset sheets
+            containing Lorem Ipsum passages, and more recently with desktop
+            publishing software like Aldus PageMaker including versions of Lorem
+            Ipsum.
+          </p>
+        </aside>
+      </section>
+    </main>
     <footer id="rodape"></footer>
   </body>
 </html>
