identando o CSS e editando a section e article

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <img id="minha_foto" src="rsz_21perfil.png" alt="me">
 
     <section>
-        <div>
+        <div id="aprendidas">
             <h3>Lista de coisas aprendidas</h3>
-            <ul id="licoes_a_aprender">
+            <ol id="licoes_aprendidas">
                 <li>Fundamentos do desenvolvimento web.</li>
                 <li>Terminal linux.</li>
                 <li>Git.</li>
@@ -37,11 +37,12 @@
                 <li>A importância das soft skills.</li>
                 <li>Administrar melhor o tempo.</li>
                 <li>Definir prioridades.</li>
+            </ol>
         </div>
 
-        <div>
+        <div id="aprender">
             <h3>Lista de coisas que ainda vou aprender</h3>
-            <ul id="licoes_aprendidas">
+            <ul id="licoes_a_aprender">
                 <li>Javascript.</li>
                 <li>React.</li>
                 <li>Redux.</li>
@@ -57,23 +58,30 @@
     </section>
 
     <article>
-        <h3>Como está sendo o meu aprendizado</h3>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nostrum aut explicabo tempora repellendus
-            nesciunt voluptatum eius aspernatur labore? Adipisci veniam vero expedita dolorum aspernatur nam incidunt
-            mollitia deserunt placeat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero, quas
-            eius vero quia, numquam vel id corrupti a neque enim nisi maxime modi fugiat architecto? Reiciendis
-            aspernatur nulla ipsa?
-        </p>
+        <section>
+            <h3>Como está sendo o meu aprendizado</h3>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nostrum aut explicabo tempora repellendus
+                nesciunt voluptatum eius aspernatur labore? Adipisci veniam vero expedita dolorum aspernatur nam
+                incidunt
+                mollitia deserunt placeat? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia libero,
+                quas
+                eius vero quia, numquam vel id corrupti a neque enim nisi maxime modi fugiat architecto? Reiciendis
+                aspernatur nulla ipsa?
+            </p>
+        </section>
     </article>
 
-    <aside>
-        <h3>A passagem que foi marcante para mim</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum est suscipit ratione incidunt ea delectus
-            laudantium laboriosam, dolorem tempora sapiente cupiditate rerum vel. Cupiditate earum sapiente, facilis
-            sunt sint consequatur?
-        </p>
-    </aside>
+    <section>
+        <aside>
+            <h3>A passagem que foi marcante para mim</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum est suscipit ratione incidunt ea delectus
+                laudantium laboriosam, dolorem tempora sapiente cupiditate rerum vel. Cupiditate earum sapiente, facilis
+                sunt sint consequatur?
+            </p>
+        </aside>
+    </section>
+
 
     <table border="1">
         <tr>
