--- a/index.html
+++ b/index.html
@@ -23,31 +23,37 @@
     <section>
         <img id="minha_foto" src="assets/img/perfil.jpeg" alt="Foto do Bruno">
     </section>
-    <section>
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Empatia</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Inspect</li>
-            <li>Semantic HTML</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS Responsive</li>
-            <li>Design Patterns</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-        </ul>
+    <section id="lists">
+        <div>
+            <h2>Lições Aprendidas</h2>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Empatia</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inspect</li>
+                <li>Semantic HTML</li>
+            </ol>
+        </div>
+        <div>
+            <h2>Lições que Desejo Aprender</h2>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>Design Patterns</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+        </div>
     </section>
     <div id="paragrafos">
         <section id="sobre_mim">
