Adicionar style no header.

--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Gabriel Mendonça</h1>
+        <h1 id="titulo">LESSONS LEARNED</h1>
     </header>
-    <nav id="navigation">
-        <ul>
+    <nav id="navegacao">
+        <ul class="listas">
             <li><a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
                         src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
             </li>
-            <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.dev.lop@gmail.com"><img
+            <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.dev.lop@gmail.com" target="_Blank"><img
                         src="https://img.shields.io/badge/gmail-D14836?&style=for-the-badge&logo=gmail&logoColor=white" /></a>
             </li>
         </ul>
     </nav>
-    <main>
+    <main id="conteudo">
         <section id="perfil">
             <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
             <p>Lições aprendidas</p>
