Requisito 6. Criaçao de um footer com ID rodape

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <li>SQL</li>
         </ul>
 
+        <footer id="rodape">
+            <p>Site created by Jhonatan Arguello</p>
+        </footer>
     </main>
 
 </body>
