Passo 10 - Adicionado menu de navegaçao

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <body>
         <header id="cabeçalho">
             <h1>Lições aprendidas - Trybe!</h1>
+            <nav>
+                <ul>
+                    <li> <a href="#">Lições aprendidas</a></li>
+                    <li> <a href="#">Lições futuras</a></li>
+                    <li> <a href="#">O que aprendi na Trybe?</a></li>
+                </ul>
+            </nav>
         </header>
         <img src="imagens/Max.jpg" alt="Imagem de perfil do Maximilian Kaden" id="minha_foto">
         <ol id="licoes_aprendidas">
