--- a/index.html
+++ b/index.html
@@ -34,4 +34,7 @@
         <li>HOF</li>
         <li>ES6</li>
     </ul>
+    <footer id="rodape">
+        <p>Feito por Pedro Henrique</p>
+    </footer>
 </body>
