Adição de Rodape e link externo

--- a/index.html
+++ b/index.html
@@ -40,15 +40,12 @@
                 <li>Unit Tests</li>
                 <li>React</li>
                 <li>Node</li>
-                <li>SQL</li>
-
-                
+                <li>SQL</li>                
             </ul>
         </section>
-</article>    
+</article>   
+<footer id="rodape">
+    <p>Saiba mais sobre a <a href="https://betrybe.com" target="_blank">Trybe</a></p>
+</footer> 
 </body>
 </html> 
-5 - A página deve possuir uma lista de lições que ainda deseja aprender
-A lista não deve ser numerada e deve possuir o ID "licoes_a_aprender"
-
-A lista deve possuir 10 itens
