--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           </nav>
       </header>
       <img id="minha_foto" src="retrato1.png" alt="foto rafael azevedo"><br>
+      <a href="https://github.com/RafaelBiatoAzevedo" target="_blanc">Rafael Azevedo</a>
       <ol id="licoes_aprendidas">
           <li>Unix</li>
           <li>Git</li>
@@ -38,16 +39,15 @@
           <li>Node</li>
           <li>SQL</li>
       </ul>
-      <article>
+      <article class="paragrafo_text">
             <h3>Meu Aprendizado na Trybe</h3>
             <p>Reforçei tudo o sabia de linux, aprendi ferramentas ótimas de comunicação como Zomm e slack que irão me ajudar muito na minha caminhadada. Aprendi Git e GitHub para controlar o versionamento do meu código e por fim HTML para estruturar minhas páginas, CSS para estiliza-las e Semantic HTML para melhorar a navegabilidade e auxiliar a acessibilidade. </p>
       </article>
-      <section>
+      <section class="paragrafo_text">
          <aside>
               <p>Comecei minha jornada em TI com 9 anos,com 17 anos fiz um courso técnico de manutenção e instalação de softwares.Aos 19 fiz gradução em Análise de Sistema na Puc-Campinas e atualmente em 2020 iniciei Desenvolvimento web na Trybe. VQV!</p>
          </aside>
       </section>
-      <a  href="https://github.com/RafaelBiatoAzevedo" target="_blanc">Rafael Azevedo</a>
       <footer id="rodape">
           <p>Todos direitos reservados, Rafael Azevedo</p>
       </footer>
