Ajuste do target

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
     <footer id="rodape">
-      <p id="rodape_info">Visitem meu <a href="http://github.com/gfpoliva" target="__blank">github</a></p>
+      <p id="rodape_info">Visitem meu <a href="http://github.com/gfpoliva" target="_blank">github</a></p>
     </footer>
   </main>
 
