Adicionando o target no link para o meu github

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <main>
       <figure>
         <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
-        <a href="https://github.com/GabriellCastro">Meu Github 👈</a>
+        <a href="https://github.com/GabriellCastro" target="_blank"
+          >Meu Github 👈</a
+        >
       </figure>
       <table>
         <section>
@@ -55,14 +57,16 @@
           </ul>
         </section>
       </table>
-      <article>
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book.
-        </p>
-      </article>
+      <section>
+        <article>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book.
+          </p>
+        </article>
+      </section>
       <section>
         <aside>
           <p>
