--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
   <head id="cabeçalho">
     <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
 </head>
-  <img  id="img" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
-<ul id="lista">
+  <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
+<ul id="licoes_aprendidas">
   <li>Git;</li>
   <li> github;</li>
   <li>HTML;</li>
   <li>HTML Semântico;</li>
   <li>CSS.</li>
+  <li>Linux;</li>
+  <li>Linkedin;</li>
+  <li>Zoom;</li>
+  <li>Soft Skills;</li>
+  <li>Empatia.</li>
 </ul>
 
 </body>
