--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                     <li>Aprender a aprender</li>
                 </ul>
             </section>
+            <section>
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tempore excepturi, rerum autem temporibus labore obcaecati iste, similique maiores accusamus, corrupti dolore aut eos quod eius officia tenetur! A, placeat?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sint distinctio quae molestiae ipsum dignissimos nemo nihil quidem, ducimus voluptates natus laudantium soluta commodi veritatis libero amet necessitatibus id iusto.</p>
+                </article>
+            </section>
         </main>
         <footer id="rodape">
             <ul>
