--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
         <header id="cabecalho">
             <h1 id="titulo">titulo</h1>
+            <nav>
+                
+            </nav>
         </header>
         <figure><img id="minha_foto" src="minha_foto.jpg" alt=""></figure>
         <ol id="licoes_aprendidas">
