--- a/index.html
+++ b/index.html
@@ -66,5 +66,9 @@
     </aside>
 </main>
 
-<footer id="rodape"></footer>
+<footer id="rodape">
+    <h4>Me encontre aqui:</h4>
+    <p><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank">LinkedIn</a></p>
+    <p><a href="https://github.com/analuizams" target="_blank">GitHub</a></p>
+</footer>
 </body>
