--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header id="cabecalho"> <h1 id="titulo">Lições Aprendidas - Trybe!</h1></header>
     <img id="minha_foto" src="images/minha_foto.jpg" alt="">
+    <br>
+    <a href="https://www.linkedin.com/in/pauloeliezerg/" target="_blank">Paulo Eliezer</a>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
