Tamanho da foto atualizado

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>Lucas Neves - Turma 09</h2>
   </header>
 
-  <img id="minha_foto" src="minha-foto.jpg" alt="Aqui podemos ver uma foto de Lucas Neves de Oliveira em sua viagem a Gramado">
+  <img id="minha_foto" src="rsz_minha-foto.jpg" alt="Aqui podemos ver uma foto de Lucas Neves de Oliveira em sua viagem a Gramado">
 
   <section>
 
