working on climate

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <title>projeto1</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-        <style>
-            
+        <style>            
         </style>
     </head>
     <body>
@@ -26,7 +25,7 @@
                 <p><img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="100px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere a. Vestibulum eu dapibus felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium felis ac odio faucibus imperdiet. Nunc tristique, sem ac commodo imperdiet, purus orci maximus elit, ac lacinia arcu nisi in metus. Vivamus congue enim orci, vel tristique orci pharetra non.</p>
             </article>
             <aside>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere.</p> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat</p>
             </aside>
                 <div id="sectionLearn">
                     <section>
@@ -59,13 +58,14 @@
                             <li>enumerar</li>
                         </ul>
                     </section>
-                </div>    
-        </main>       
-    </body>
-    <footer id="rodape">
-        <p><a href="https://www.lipsum.com/" target="_blank">Gerador de Textos</a></p>
-        <p>&#x1F4EA;ehauehuae@heau.com</p>        
+                </div>
+            </main>
+        </body>
+        <footer id="rodape">
+            <p><a href="https://www.lipsum.com/" target="_blank">Gerador de Textos</a></p>
+            <p>&#x1F4EA;ehauehuae@heau.com</p>
         <p>&#x1F4F1;1215 16841 6841</p>
-        <p>Powered by: Rodrigo Camargo</p>        
+        <p>Powered by: Rodrigo Camargo</p>
     </footer>
-</html>
+    </html>
+    
