Requisito 9 - Adicionado seção e aside sobre passagem de aprendizado

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       <li>Lógica de programação</li>
     </ul>
     <article id="artigo_aprendizado">Sou estudante de Trybe desde 09 de Novembro de 2020 e em apenas 15 dias aprendi a utilizar o bash/shell do sistema unix e seus principais comandos, a versionar arquivos com o git e armazenar em repositórios remotos como o github. Aprendi também a estruturar, tonar acessível, dar sentido e estilizar páginas web utilizando as linguagens de marcação html e estilo css. Estou encantado como a Trybe vem me ajudando a organizar melhor meu tempo, a conhecer pessoas maravilhosas e ter mais empatia. Sim!! Tudo isso em apenas 15 dias!!</article>
+    <aside>
+      <section>Sou estudante de Trybe desde 09 de Novembro de 2020 e em apenas 15 dias aprendi a utilizar o bash/shell do sistema unix e seus principais comandos, a versionar arquivos com o git e armazenar em repositórios remotos como o github.</section>
+    </aside>
   </main>
   <footer id="rodape">Rodapé</footer>
 </body>
