--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Projeto - Lessons Learned</h1>
-      <img id="minha_foto" src="layo.jpg" alt="layoFoto" />
     </header>
     <main>
+        <img id="minha_foto" src="layo.jpg" alt="layoFoto" />
+        <aside>
+            <p>
+              Todo dia tem sido uma luta para estilizar dentro do CSS, creio que a
+              evolução venha com a experiencia, a cada dia melhorando mais e
+              aprendendo mais sobre esse mundo do CSS.
+            </p>
+          </aside>
+          <section id="list">
       <ol id="licoes_aprendidas">
         <li>Linux</li>
         <li>Git</li>
@@ -36,6 +44,7 @@
         <li>Controle da ansiedade</li>
         <li>Unit Tests</li>
       </ul>
+    </section>
       <article>
         <p>
           Desde que entrei na Trybe, meu aprendizado tem sido exponencial devido
@@ -45,18 +54,8 @@
           dentro da área que estou me descobrindo.
         </p>
       </article>
-      <aside>
-        <p>
-          Todo dia tem sido uma luta para estilizar dentro do CSS, creio que a
-          evolução venha com a experiencia, a cada dia melhorando mais e
-          aprendendo mais sobre esse mundo do CSS.
-        </p>
-      </aside>
     </main>
-    <footer id="rodape">
-      <a id="link" href="https://blog.betrybe.com/" target="_blank"
-        >Blog da Trybe!</a
-      >
-    </footer>
+    <nav><a id="link" href="https://blog.betrybe.com/" target="_blank">Blog da Trybe!</a></nav>
+    <footer id="rodape"></footer>
   </body>
 </html>
