posicionando a nav no html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <section>
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
       </section>
+    </header>
+    <section>
       <nav>
         <ul>
           <li><a href="#">Página inicial</a></li>
@@ -19,7 +21,7 @@
           <li><a href="#">Contato</a></li>
         </ul>
       </nav>
-    </header>
+    </section>
     <main>
       <figure>
         <img id="minha_foto" src="/minhaimg.jpeg" alt="minha foto" />
