--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1 id="titulo">Lições aprendidas - Trybe</h1>
     </header>
     <img id="minha_foto" src="./foto-Ivan.jpg" alt="minha-foto" width="300">
+    <a href="https://github.com/ivanrafael-dev" target="_blank">GitHub</a>
     <ol id="licoes_aprendidas">
       <li>Unix</li>
       <li>Bash</li>
