--- a/index.html
+++ b/index.html
@@ -43,15 +43,42 @@
         <section>
             <header>
                 <h2>E o que estou achando?</h2>
-                <article>
-                    <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco, mas, parando para analisar realmente, aprendi demais! Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer.</p>
-                    <p>Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e eu sou mesmo kk). <strong>#VQV</strong></p>
-                </article>
             </header>
+            <article>
+                <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco, mas, parando para analisar realmente, aprendi demais! Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer.</p>
+                <p>Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e eu sou mesmo kk). <strong>#VQV</strong></p>
+            </article> 
+        </section>
+        <section>
+            <header>
+                <h2>Um breve resumo sobre o currículo da Trybe</h2>
+            </header>
+            <article>
+                <table>
+                    <tr>
+                        <th>Fundamentos do Desenvolvimento Web</th>
+                        <td>Unix & Bash, Git, HTML & CSS, JavaScript e testes</td>
+                    </tr>
+                    <tr>
+                        <th>Desenvolvimento Front-end</th>
+                        <td>React, Redux e consumo de APIs</td>
+                    </tr>
+                    <tr>
+                        <th>Desenvolvimento Back-end</th>
+                        <td>Bancos de dados, NodeJS, ExpressJS</td>
+                    </tr>
+                    <tr>
+                        <th>Computer Science</th>
+                        <td>Python, Estruturas de dados e resolução de problemas</td>
+                    </tr>
+                </table>
+            </article>
         </section>
         <aside>
             <section>
-                <header><h2>A briga com a centralização vertical...</h2></header>
+                <header>
+                    <h2>A briga com a centralização vertical</h2>
+                </header>
                 <article>
                     <p>Após a aula do bloco 3.3, onde estudamos um pouco mais sobre os seletores no CSS, tentei aplicar na página do meu portfólio o conteúdo visto. Criei uma seção a qual precisava centralizar um conteúdo verticalmente e passei o final de semana todo tentando fazê-lo.</p>
                 </article>
