--- a/index.html
+++ b/index.html
@@ -6,6 +6,51 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+        <header id="cabecalho">
+                <h1 id="titulo">Titulo</h1>
+        </header>
 
+        <img id="minha foto" src="perfil_felipe_shcolnik.jpg" alt="foto_Felipe_Shcolnik">
+        <h4>Lições aprendidas</h4>
+        <ol id="lições_aprendidas">
+          <li>instalar o Linux</li>
+          <li>Mexer no novo sistema operacional</li>
+          <li>Usar a ferramenta GitHub</li>
+          <li>Passos basicos de HTML</li>
+          <li>Passos Basicos de CSS</li>
+          <li>Identacao de paginas</li>
+          <li>Soft Skills</li>
+          <li>Git Ignore</li>
+          <li>Utilizar o Zoom de forma organizada</li>
+          <li>Buscar solucoes para as questoes de forma independete</li>
+        </ol>
+        <h4>Lições a aprender</h4>
+        <ul id="licoes_a_aprender">
+          <li>layoutar pagina de forma harmoniosa</li>
+          <li>corrigir códigos</li>
+          <li>Banco de dados</li>
+          <li>JavaScript</li>
+          <li>Phyton</li>
+          <li>identar paginas de acordo com as boas praticas de forma natural</li>
+          <li>organizacao de projetos</li>
+          <li>Forma de me comportar nas entrevisas de emprego</li>
+          <li>criar projetos eficientes</li>
+          <li>Rede</li>
+        </ul>
+
+        <article>
+          <h4>Processo de aprendizado na <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao_2&utm_content=anuncio01&gclid=EAIaIQobChMIkv-L1Ymc7QIVUweRCh2ItQcGEAAYASAAEgKLUPD_BwE" target="blank">Trybe</a></h4>
+          <p>Os desafios comecaram logo que tive que instalar o Linux na minha máquina. Ainda faltava uma semana para o inicio do curso, porém nao havia ninguem para me ajudar até entao. Nao dava tempo para se lamentar, entao entrei de cabeca na missao.</p>
+          <p>Foram inumeros problemas. Alguns ainda nao solucionados como a recuperacao dos meus arquivos de backup do Windows.</p>
+          <p>Continuação...</p>
+        </article>
+
+        <aside id=sessao_de_aprendizado>
+          <h5>Git A 1 impressao engana</h5>
+          <p>Git é uma ferramenta muito importante na área de TI. Muitas das atividades usam esta inteligencia para dar mais dinamica nos trabalhos em equipe.<br>Porém, na primeira explicação, muitos vão achar que é algo simples de ser executado, mas só na prática irão percerber quantos <em>tricks</em> acontecem e te deixam noites sem dormir.</p>
+
+        <footer id=rodape>
+          <p>Esta página refere-se ao primeiro projeto da Turma 9 :: Processo de ensino de Programacao e preparacao para o mercado de trabalho</p>
+        </footer>
   </body>
 </html>
