Barra superior com título - 3

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
 <!--  A barra deve possuir o ID "cabecalho" -->
     <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas</h1>
+      <nav>
+        <h1 id="titulo">Lições Aprendidas - Trybe</h1>
+      </nav>
     </header>
 
 <!--  A foto deve ser inserida utilizando uma tag img com o ID "minha_foto" -->
@@ -70,7 +72,8 @@
     </table>
 
 <!-- A configuração desse link deve ser feita para abrir em uma nova aba do navegador -->
-    <a href="http://adrenaline.com.br" target="_blank" rel="noopener noreferrer">Adrenaline</a>
+    <p class="btn"><a href="http://adrenaline.com.br" target="_blank" rel="noopener noreferrer">Adrenaline</a></p>
+
     <section class="artigo">
 <!-- A seção deve ter mais que 100 letras e menos que 300 -->
       <aside class="lado-direito">
