--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Projeto Lições Aprendidas</title>
+  <title>Projeto 1 - Lições Aprendidas</title>
 </head>
 <body>
   <header id="cabecalho">
