--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Willian Bachini</h1>
+        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
 </body>
 </html>
